--- a/styles/style.css
+++ b/styles/style.css
@@ -251,8 +251,8 @@ nav > ul{
     border-radius: 50px;
 }
 .btn-primary-3{
-    width: 243px;
-    height: 80px;
+    width: 15.2rem;
+    height: 5rem;
     border: 2px solid black;
     border-radius: 50px;
     font-size: 1rem;
@@ -267,8 +267,8 @@ nav > ul{
     color: aliceblue;
 }
 .btn-primary{
-    width: 243px;
-    height: 80px;
+    width: 15.2rem;
+    height: 5rem;
     padding: 10px 0px;
     flex-shrink: 0;
     border-radius: 50px;
@@ -341,13 +341,13 @@ nav > ul{
     
     }
     
-    .container1, .container2{
-        display: grid;
-        grid-template-rows: repeat(5, 2fr);
-        margin-left:0px ;
+    .btn-img{
+        display: flex;
+
     }
     .gamer-text{
         text-align: center;
+        width: 100%;
     }
     .card, .card-3{
         width: 100%;
