--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Work+Sans:wght@400;500;600;700&display=swap');
+
 
 *{
     width: 100%;
+    font-family: 'Work Sans';
     
 }
 
