--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 
 *{
     width: 100%;
-    font-family: 'Work Sans';
+    font-family: 'Work Sans'; 
     
 }
 
@@ -11,7 +11,7 @@
     display: flex;
     text-align: center;
     justify-content: space-between;
-    margin: 10px 10px;
+    margin: 10px 0px;
 }
 #G{
     color: rgb(230, 8, 145);
@@ -60,7 +60,6 @@ nav > ul{
     font-size: 1.2rem;
     font-weight: 400;
     border: 1px;
-    width: 200px;
     border-radius: 8px;
     background: rgb(245, 244, 244);
 }
@@ -71,6 +70,7 @@ nav > ul{
 /*header style*/
 .header{
     display: flex;
+
     justify-content:space-around;
     gap: 100px;
     
@@ -94,8 +94,8 @@ nav > ul{
 }
 .header-text{
     background-image: url(../images/Group\ 14.png);
-    width: 900px;
-    height: 900px;
+    width: 800px;
+    height: 600px;
     text-align: left;
     padding: 50px 150px;
 }
@@ -107,10 +107,12 @@ nav > ul{
 
 }
 .header-icon{
-    padding-top:30px ;
     width: 24px;
     height: 24px;
     
+}
+.header-text i{
+    padding: 15px 0px;
 }
 .header.img{
     margin-right: 0px;
@@ -121,21 +123,21 @@ nav > ul{
 }
 .btn-sign{
     width: 160px;
-    height: 23px;
+    height: 50px;
     border: 0px;
-    padding: 21px 40px;
     color: white;
+    font-size: 1.5rem;
     text-align: center;
     border-radius: 48px;
     background:#FF42A5;
 }
 .btn-go{
     width: 160px;
-    height: 23px;
+    height: 50px;
     border: 0px;
-    padding: 21px 40px;
+    font-size: 1.5rem;
     color: white;
-    text-align: left;
+    text-align: center;
     border-radius: 48px;
     background: #4EC5F7;
 }
@@ -146,7 +148,9 @@ nav > ul{
     padding: 50px 200px;
     gap: 50px;
 }
+
 .gamer-text{
+    width: 500px;
     text-align: right;
     margin-right: 150px;
 }
@@ -159,7 +163,7 @@ nav > ul{
     -webkit-text-fill-color: transparent;
 }
 .gamer-pera{
-    width: 650px;
+    width: 500px;
     color: #534C64;
     font-size: 18px;
     font-weight: 400;
@@ -185,18 +189,23 @@ nav > ul{
 }
 .card-3{
     width: 242px;
-    height: 600px;
+    height: 400px;
+    
 }
+
 .btn-watch{
     color: #F948B2;
     border: none;
     background: none;
     position: relative;
     bottom: 170px;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 .btn-watch:hover{
     color: white;
+    border:5px solid #e7e5ec;
+    background-color: #0B0223;
 }
 .online-text{
     font-size: 3rem;
@@ -208,18 +217,22 @@ nav > ul{
     gap: 200px;
 }
 .play-text{
-    width: 450px;
-    height: 450px;
-    text-align: center;
+    width: 400px;
+    height: 500px;
+    text-align: right;
     padding-top: 100px;
 }
-/*.play-img{
-    height: 90%;
-}*/
+.play-img{
+    width: 532px;
+    height: 700px;
+    
+}
 .img-small{
+    width: 200px;
+    height: 350px;
    position: relative;
-   bottom: 150px;
-   right: 400px;
+   bottom: 180px;
+   right: 100px;
 
 }
 
@@ -266,21 +279,22 @@ nav > ul{
     -webkit-text-fill-color: transparent;
 }
 .btn-primary-3:hover {
-    background: #F948B2;
+    background: #796772;
     color: aliceblue;
+    text-align: center;
+    
 }
 .btn-primary{
     width: 15.2rem;
     height: 5rem;
     padding: 10px 0px;
-    flex-shrink: 0;
     border-radius: 50px;
-    background: #ffff;
+    background: lightyellow;
     font-size: 1rem;
     font-weight: 600;
-    text-align: left;
+    text-align: center;
     border: none;
-    gap: 40px;
+    
 }
 .btn-primary img{
     width: 60px;
@@ -312,6 +326,7 @@ nav > ul{
     list-style: none;
     text-decoration: none;
     text-align: center;
+    gap: 0px;
 }
 .list2{
     display: flex;
